--- a/src/config.ini.example
+++ b/src/config.ini.example
@@ -1,18 +1,76 @@
+# This config configures the singen tool. Every section is an function added to some channel(s). The section names ([name]) should be unique but could have any name except for the general one.
+
+
+
+### This section sets the general properties of the file ###
 [general]
+
+#The number of bits in each sample
 bits = 16
+
+#The Sample rate in hz
 rate = 44100
+
+#The length of the file in seconds
 length = 60
+
+#The amount of audio channels that are generated
 channels = 2
 
-[sinwave1]
-type = sinwave
-channels = 1,2
-frequency = 440.0
-amplitude = 1
 
+
+### The sinwave for channel 1 without a shift ###
+[sinwave1]
+
+#The type of function that is added to the channel
+type = sinwave
+
+#The channels that the function is applied to
+channels = 1
+
+#The frequency of the wave in hz
+frequency = 240.0
+
+#The amplitude of the wave
+amplitude = 0.5
+
+#The relative shift of the wave
+shift = 0
+
+
+
+### The sinwave for channel 1 without a shift ###
+[sinwave2]
+
+#The type of function that is added to the channel
+type = sinwave
+
+#The channels that the function is applied to
+channels = 2
+
+#The frequency of the wave in hz
+frequency = 240.0
+
+#The amplitude of the wave
+amplitude = 0.5
+
+#The relative shift of the wave. In this case "0.3" which means 0.3 times the period shifted. So the wave is shifted 1/3 of the period.
+shift = 0.3
+
+
+
+### The noise added two both channels. It will be the same noise.
 [noise1]
+
+#Defining that this function is a noise generator
 type = white_noise
+
+#The channels that the function is applied to
 channels = 1,2
-amplitude = 0.00005
+
+#The amplitude of the noise
+amplitude = 0.5
+
+#The seed of the noise. This is just a random number.
 seed = 1243254
 
